# wjs-profile-project

./: .gitlab-ci-pkg-build-and-upload.yml  .gitlab-ci-pkg-deploy-to-test.yml  .gitlab-ci-pkg-deploy.yml  .gitlab-ci-run-tests.yml  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  cicd_merged_settings.py  cicd_settings.py  cicd_testjob_settings.py  docker-compose-test-env.yml  janeway-instace-check.sh  jcom-redirects_include.conf  pyproject.toml  setup.cfg  test_settings.py
Dockerfile-python+git+janeway/: Dockerfile
jcomprofile/: __init__.py  admin.py  apps.py  forms.py  models.py  plugin_settings.py  signals.py  tests.py  urls.py  views.py
jcomprofile/migrations/: 0001_initial.py
setup-docs/: apache-virtualhost-example.conf  finalize-deploy.sh  jcom_settings.json  settings.py  trasbordo-pp-test.sh
wjs/conf/: apache-redirects.inc
wjs/jcom_profile/: admin.py  apps.py  factories.py  forms.py  hooks.py  import_utils.py  middleware.py  models.py  plugin_settings.py  signals.py  tasks.py  translation.py  urls.py  utils.py  views.py  wjs_events.py
wjs/jcom_profile/events/: assignment.py  wjs_events.py  wjs_registration.py
wjs/jcom_profile/migrations/: 0004_20221004_coauthors_template_datamigration.py  0004_specialissue_squashed_0008_auto_20221013_1539.py  0005_auto_20221005_1620.py  0005_auto_20221018_0924.py  0006_auto_20221109_1907.py  0006_auto_20221110_0853.py  0006_auto_20221110_1129.py  0006_auto_20221110_1133.py  (+17 more)
wjs_jcom_profile/: __init__.py  admin.py  apps.py  forms.py  plugin_settings.py  signals.py  urls.py  views.py
(+122 files in other folders)
